# fitbit_bot

./: .env.exmple  .gitignore  ASSIGNMENT_PLAN.txt  README.md  Technical Design Document.docx  fitbit_data_ingestion_sqlite3.py  health_kb_loader.py  inspect_db.py  main.py  populate_user_profile.py  pyproject.toml
app/: app.py  chat_config.json  config.json
dataset/: dataset_config.py  fitbit_data_ingestion_sqlite3.py  generate_dataset.py  health_kb_loader.py  populate_user_profile.py
dataset/health_data/: Blood_Oxygen.txt  Blood_Pressure.txt  Body_Fat_Percentage.txt  Chronic_Conditions.txt  Exercise_and_Fitness.txt  General_Health.txt  Heart_Rate_Zones.txt  Mens_Health.txt  Mental_Health.txt  Nutrition.txt  Nutrition_and_Diet.txt  Questions_and_Answers.txt  Reproductive_and_Sexual_Health.txt  Seniors_Health.txt  VO2_Max.txt  Vital_Signs.txt  Womens_Health.txt  Workout_Plans_and_Goals.txt  index.txt  test2.txt
dataset/user_profiles/: 1503960366.json  2022484408.json
graph/: config_loader.py  config_schemas.py  consts.py  data_config.py  graph.py  helpers.py  memory.py  schemas.py  state.py  static_responses.py
graph/agents/: suggestor.py
graph/chains/: data_availability.py  intent.py  request_clarification.py
graph/defaults/: intent.py  (+2 more)
notebooks/: agent_loop_sandbox.ipynb  config_debug.ipynb  debug_graph.ipynb  evalate_process_node.py  execution_agent_sandbox.ipynb  graphs_sandbox.ipynb  init_model_sandmox.ipynb  kb_sandbox.ipynb  sql_sandbox.ipynb  tools_sandbox.ipynb
tests/: live_utils.py  test_chains.py  test_process_planner.py  test_router.py
(+71 files in other folders)
